[gd_scene load_steps=17 format=3 uid="uid://cg2s7hhb4i8cu"]

[ext_resource type="Script" path="res://scripts/doctor.gd" id="1_iatac"]
[ext_resource type="Texture2D" uid="uid://btthprxygasfu" path="res://assets/doctor_full.png" id="2_7xw8w"]
[ext_resource type="Texture2D" uid="uid://dcpjulxx3tfgo" path="res://assets/doctor_empty.png" id="3_w2lmm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hb2hw"]
size = Vector2(7, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_esc2k"]
atlas = ExtResource("2_7xw8w")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_60hjl"]
atlas = ExtResource("2_7xw8w")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q3n1"]
atlas = ExtResource("2_7xw8w")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhdrx"]
atlas = ExtResource("2_7xw8w")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvb4h"]
atlas = ExtResource("2_7xw8w")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbobb"]
atlas = ExtResource("3_w2lmm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yydrm"]
atlas = ExtResource("3_w2lmm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_inhbd"]
atlas = ExtResource("3_w2lmm")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1ys8"]
atlas = ExtResource("3_w2lmm")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb0q8"]
atlas = ExtResource("3_w2lmm")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ga5gs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_esc2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60hjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q3n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhdrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvb4h")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbobb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yydrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inhbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1ys8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb0q8")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_a4hf1"]
radius = 211.038

[node name="Doctor" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_iatac")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_hb2hw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ga5gs")
animation = &"empty"
autoplay = "empty"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_a4hf1")

[node name="SyringeRechargeTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="SyringeRechargeTimer" to="." method="_on_syringe_recharge_timer_timeout"]
